main.tf
provider "aws" {
  region = "us-east-1"
}


resource "aws_security_group" "lab_sg" {
  name = "devops-lab-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "devops_lab" {
  ami           = "ami-0c02fb55956c7d316"
  instance_type = "t2.micro"

key_name = "devops-key-ssh"

  vpc_security_group_ids = [aws_security_group.lab_sg.id]

user_data = <<-EOF
              #!/bin/bash
              yum update -y
              amazon-linux-extras install docker -y
              systemctl start docker
              systemctl enable docker
              sleep 15
              docker run -d -p 80:80 nginx
              EOF

  tags = {
    Name = "DevOps-Lab-Server"
  }
}
